# Ursine3D

./: .gitattributes  .gitignore  CMakeCache.txt  Clean-VS.bat  Generate School.vbs  Generate-VS-School.bat  Generate-VS.bat  Generate.vbs  README.md
Source/: .gitignore  CMakeLists.txt  ReSharper.DotSettings
Source/Projects/Editor/: CMakeLists.txt
Source/Projects/Editor/Assets/: test1.jdl
Source/Projects/Editor/Source/: Editor.cpp  Editor.h  EditorPreferences.h  EditorReflection.h  EditorReflectionModule.h  EditorWindow.cpp  EditorWindow.h  Main.cpp  Potato.h  Precompiled.cpp  Precompiled.h  Reflection.h  Test.cpp  Test.h
Source/Projects/Editor/Tools/: bmfont.bmfc
Source/Projects/GameLauncher/: CMakeLists.txt
Source/Projects/GameLauncher/Source/: GameLauncher.cpp  GameLauncher.h  GameLauncherGameContext.cpp  GameLauncherGameContext.h  GameLauncherReflectionModule.h  JSGameContext.cpp  JSGameContext.h  Main.cpp  Precompiled.cpp  Reflection.h
Source/Projects/Retrospect/: CMakeLists.txt
Source/Projects/Retrospect/Project/: HierarchyTest.uworld  OtherTest.uworld  PhysicsTestBed.uworld  SubmissionSemester1.uworld  TestWorld.uworld  butts.uworld  butts2.uworld
Source/Projects/Retrospect/Source/: Main.cpp  Precompiled.h  Reflection.h  Retrospect.cpp  Retrospect.h  RetrospectReflectionModule.h
Source/Projects/Tests/Audio/: CMakeLists.txt
Source/Projects/Tests/ECS-FilterSystemTests/: CMakeLists.txt
Source/Projects/Tests/Graphics/: CMakeLists.txt
Source/Projects/Tests/Math/: CMakeLists.txt
Source/Projects/Tests/Math-Matrix/: CMakeLists.txt
Source/Projects/Tests/Math-Quaternion/: CMakeLists.txt
Source/Projects/Tests/Math-Transform/: CMakeLists.txt
Source/Projects/Tests/Math-Vector/: CMakeLists.txt
Source/Projects/Tests/Meta/: CMakeLists.txt
Source/Projects/Tests/Physics/: CMakeLists.txt
Source/Shared/: CMakeLists.txt
Source/Shared/CS460/: CMakeLists.txt
Source/Shared/CS460/Source/: Precompiled.h  SharedComponents.h  SharedReflection.h  SharedReflectionModule.h  SharedSystems.h
Source/Shared/Rafflesia/: CMakeLists.txt
Source/Shared/Rafflesia/Source/: Precompiled.h  SharedReflection.h  SharedReflectionModule.h
Source/Shared/Source/: ComponentIncludes.h  Precompiled.h  SharedComponents.h  SharedReflection.h  SharedSystems.h
Source/Shared/Source/AI/: AIControllerSystem.h  AIHordeReasoner.cpp  AIHordelingTypeComponent.h  AIMovementControllerComponent.cpp  AIMovementControllerComponent.h  AIPriorityQueue.h  AIReasonerSystem.cpp  AIState.cpp  AIState.h  AIStateMachine.cpp  AIStateMachine.h  WaypointAgentComponent.cpp  WaypointAgentComponent.h  WaypointComponent.cpp  WaypointComponent.h  WaypointManagerComponent.cpp  WaypointManagerComponent.h  WaypointSystem.cpp  WaypointSystem.h
Source/Shared/Source/CameraAnimation/: CameraAnimatorComponent.cpp  CameraAnimatorComponent.h  CameraAnimatorFocusPointComponent.cpp  CameraAnimatorFocusPointComponent.h  CameraAnimatorNodeComponent.cpp  CameraAnimatorNodeComponent.h  CameraAnimatorSystem.cpp  CameraAnimatorSystem.h
Source/Shared/Source/CommandSystem/: AxisCommand.cpp  AxisCommand.h  Command.cpp  Command.h  CommandQueueComponent.cpp  CommandQueueComponent.h  CommandQueueSystem.cpp  CommandQueueSystem.h  InputControllerComponent.cpp  InputControllerComponent.h  InputControllerSystem.cpp  InputControllerSystem.h  RecordableAxisCommand.cpp  RecordableAxisCommand.h  RecordableCommand.cpp  RecordableCommand.h  RecordableCommandConfig.h  Recording.cpp  Recording.h
Source/Shared/Source/Components/: BaseWeaponComponent.cpp  BaseWeaponComponent.h  CharacterControllerComponent.cpp  CharacterControllerComponent.h  CharacterFireControllerComponent.cpp  CharacterFireControllerComponent.h  CommandInputControllerComponent.cpp  CommandInputControllerComponent.h  CommandQueueComponent.cpp  CommandQueueComponent.h  ComponentIncludes.h  ControlPointComponent.cpp  ControlPointComponent.h  CritSpotComponent.cpp  CritSpotComponent.h  DamageOnCollideComponent.cpp  DamageOnCollideComponent.h  ExplosionComponent.cpp  ForceComponent.cpp  ForceComponent.h  HealthComponent.cpp  HealthComponent.h  InventoryComponent.cpp  InventoryComponent.h  PickupEvents.inl  PlayerAnimationComponent.cpp  PlayerAnimationComponent.h  PlayerIdComponent.cpp  PlayerIdComponent.h  PlayerInputComponent.cpp  PlayerInputComponent.h  ProjectileComponent.cpp  ProjectileComponent.h  RandomSlerpComponent.cpp  RandomSlerpComponent.h  RecorderComponent.cpp  RecorderComponent.h  SpawnpointComponent.cpp  SpawnpointComponent.h  TeamComponent.cpp  (+5 more)
Source/Shared/Source/DamageSystem/: CritSpotComponent.cpp  CritSpotComponent.h  DamageEvent.h  DamageOnCollideComponent.cpp  DamageOnCollideComponent.h  DamageOnCollideSystem.cpp  DamageOnCollideSystem.h  DamageTextComponent.cpp  DamageTextComponent.h  DamageTextManagerComponent.cpp  DamageTextManagerComponent.h  DamageTextSystem.cpp  DamageTextSystem.h  ExplosionComponent.cpp  ExplosionComponent.h
Source/Shared/Source/EntityAnimation/: EntityAnimatorClipComponent.cpp  EntityAnimatorClipComponent.h  EntityAnimatorComponent.cpp  EntityAnimatorComponent.h  EntityAnimatorFocusModifierComponent.cpp  EntityAnimatorFocusModifierComponent.h  (+5 more)
Source/Tools/ProjectGenerator/: ProjectGenerator.sln
Source/Tools/ReflectionParser/: CMakeLists.txt
Source/Ursine3D/: CMakeLists.txt
Source/Ursine3D/cmake/: Compiler.cmake  DefaultProject.cmake  DirectXSetup.cmake  FBXSetup.cmake  FindDirectX.cmake  GlobalConfig.cmake  MetaGeneration.cmake  ParseArguments.cmake  Platform.cmake  Precompiled.cmake  SourceGroup.cmake  UrsineProject.cmake
Source/Ursine3D/include/: UrsineBuildConfig.h  UrsinePlatform.h  UrsinePrecompiled.h  UrsineReflection.h  UrsineReflectionExternal.h  UrsineReflectionModule.h
Source/Ursine3D/src/: UrsinePrecompiled.cpp
Source/UrsineEngine/: CMakeLists.txt
Source/UrsineEngine/cmake/: BoostSetup.cmake  DefaultProject.cmake  NSIS.InstallOptions.ini.in
Source/UrsineEngine/include/: Meta.h  UrsineBuildConfig.h  UrsinePlatform.h  UrsinePrecompiled.h
Source/UrsineEngine/src/: UrsinePrecompiled.cpp
(+4028 files in other folders)
